--- a/package.json
+++ b/package.json
@@ -5,5 +5,21 @@
   "main": "dist/index.js",
   "repository": "https://github.com/moffin-tech/postal-code-mx",
   "author": "Victor Diaz",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.16",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "eslint": "^7.16.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-chai-friendly": "^0.6.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-mocha": "^8.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
+  }
 }
